@@ -220,6 +220,7 @@ struct options
     int cyclomatic;		/* print cyclomatic information */
     int noOverlay;		/* don't overlay local variables & parameters */
     int mainreturn;		/* issue a return after main */
+    int xram_movc;              /* use movc instead of movx to read xram (mcs51) */
     int nopeep;			/* no peep hole optimization */
     int asmpeep;		/* pass inline assembler thru peep hole */
     int debug;			/* generate extra debug info */
